--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ book:
   title: "Creative Coding with Pure Data"
   author: "Ezequiel Abregú"
   date: "2025-05-11"
+  repo-url: https://github.com/ezequielabregu/creative-code-with-pd
   chapters:
     - index.qmd
     - chapters/introduction.qmd
@@ -13,7 +14,12 @@ book:
     - chapters/synthesis.qmd
     - chapters/tools.qmd
     - chapters/sonification.qmd
-    - chapters/conclusion.qmd
+    - chapters/conclusion.qmd  
+
+#  sidebar: 
+#    #background: "#F5F5F5"
+#    logo: /assets/images/index/cover_1.png
+#    search: true
 
 bibliography: references.bib
 
