--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ book:
   title: "Creative Coding with Pure Data"
   author: "Ezequiel Abregú"
   date: "2025-05-11"
-  repo-url: https://github.com/ezequielabregu/creative-code-with-pd
+
   chapters:
     - index.qmd
     - chapters/introduction.qmd
@@ -15,7 +15,14 @@ book:
     - chapters/tools.qmd
     - chapters/sonification.qmd
     - chapters/conclusion.qmd  
+  
+  page-footer:
+    center: 
+    - text: "Creative Coding with Pure Data - Ezequiel Abregú - 2025"
 
+  reader-mode: true
+  repo-url: https://github.com/ezequielabregu/creative-code-with-pd
+  #repo-actions: [issue]
 #  sidebar: 
 #    #background: "#F5F5F5"
 #    logo: /assets/images/index/cover_1.png
@@ -42,7 +49,7 @@ website:
   navbar: false
   page-navigation: true
   repo-url: https://github.com/ezequielabregu/creative-code-with-pd
-  repo-actions: [edit, issue]
+  #repo-actions: [edit, issue]
 
 #reference-location: margin
 #citation-location: margin
