--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ book:
   
   page-footer:
     center: 
-    - text: "Creative Coding with Pure Data ::: Ezequiel Abregú"
+    - text: "Creative Coding with Pure Data - Ezequiel Abregú"
 
   reader-mode: true
   repo-url: https://github.com/ezequielabregu/creative-code-with-pd
