--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,11 @@
 project:
   type: book
 
+execute:
+  freeze: auto
+
+jupyter: python3
+
 book:
   title: "Creative Coding with Pure Data"
   author: "Ezequiel Abregú"
@@ -50,6 +55,8 @@ website:
   page-navigation: true
   repo-url: https://github.com/ezequielabregu/creative-code-with-pd
   #repo-actions: [edit, issue]
+
+
 
 #reference-location: margin
 #citation-location: margin
