--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ book:
     - chapters/sequencers.qmd
     - chapters/synthesis.qmd
     - chapters/sonification.qmd
+    - chapters/space.qmd
     - chapters/tools.qmd
     - chapters/conclusion.qmd
   
