--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,8 @@ execute:
 jupyter: python3
 
 book:
-  title: "Creative Coding with Pure Data"
+  title: "Code that Sounds"
+  subtitle: "Creative Coding and Sonic Thinking with Pure Data"
   author: "Ezequiel Abregú"
   date: "2025-05-11"
 
@@ -24,10 +25,10 @@ book:
   
   page-footer:
     center: 
-    - text: "Creative Coding with Pure Data - Ezequiel Abregú"
+    - text: "Code that Sounds - Ezequiel Abregú"
 
   reader-mode: true
-  repo-url: https://github.com/ezequielabregu/creative-code-with-pd
+  repo-url: https://github.com/ezequielabregu/code-that-sounds
   #repo-actions: [issue]
 #  sidebar: 
 #    #background: "#F5F5F5"
@@ -51,10 +52,15 @@ format:
     lightbox: true
     css: styles.css
 
+  pdf:
+    documentclass: scrreprt
+    toc: true
+    number-sections: true
+
 website:
   navbar: false
   page-navigation: true
-  repo-url: https://github.com/ezequielabregu/creative-code-with-pd
+  repo-url: https://github.com/ezequielabregu/code-that-sounds
   #repo-actions: [edit, issue]
 
 
