Add conclusion.qmd chapter

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,7 +22,7 @@ book:
     - chapters/space.qmd
     - chapters/conclusion.qmd
     #- chapters/appendix.qmd
-    - chapters/references.qmd
+    #- chapters/references.qmd
   
   page-footer:
     center: 
