Change chapters's title (sequencer space synthesis sampling)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ book:
     - index.qmd
     - chapters/introduction.qmd
     - chapters/sequencer.qmd
-    - chapters/playrec.qmd
+    - chapters/sampling.qmd
     - chapters/synthesis.qmd
     - chapters/sonification.qmd
     - chapters/space.qmd
