Add images captions until sequencing

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ book:
   chapters:
     - index.qmd
     - chapters/introduction.qmd
-    - chapters/sequencer.qmd
+    - chapters/sequencing.qmd
     - chapters/sampling.qmd
     - chapters/synthesis.qmd
     - chapters/sonification.qmd
